Rename Launch name

--- a/src/IActionResultSample/Properties/launchSettings.json
+++ b/src/IActionResultSample/Properties/launchSettings.json
@@ -17,7 +17,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "ControllerBaseHelpDemo": {
+    "IActionResultSample": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "Content/DemoUnicode",
