Add Print method.

--- a/src/3.1/AppsettingConfiguration/appsettings.json
+++ b/src/3.1/AppsettingConfiguration/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "I'm Connection String."
+  },
   "Server": "127.0.0.1",
   "User": "demo",
   "Pwd": "demo"
