Add GetHierarchicalData Sample

--- a/src/3.1/AppsettingConfiguration/appsettings.json
+++ b/src/3.1/AppsettingConfiguration/appsettings.json
@@ -2,6 +2,10 @@
   "ConnectionStrings": {
     "DefaultConnection": "I'm Connection String."
   },
+  "AppInfo": {
+    "Name": "AppsettingLab",
+    "Maintainer": "kkbruce"
+  },
   "Server": "127.0.0.1",
   "User": "demo",
   "Pwd": "demo"
