--- a/src/3.1/AppsettingConfiguration/AppsettingConfiguration.csproj
+++ b/src/3.1/AppsettingConfiguration/AppsettingConfiguration.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="3.1.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.1" />
   </ItemGroup>
 
