Add .AddCommandLine() sample

--- a/src/3.1/AppsettingConfiguration/Properties/launchSettings.json
+++ b/src/3.1/AppsettingConfiguration/Properties/launchSettings.json
@@ -2,6 +2,7 @@
   "profiles": {
     "AppsettingConfiguration": {
       "commandName": "Project",
+      "commandLineArgs": "Mode=ShowTime",
       "environmentVariables": {
         "CONSOLE_ENVIRONMENT": "Debug"
       }
