Add GetValue、GetSection、GetChildren、Exists sample

--- a/src/3.1/AppsettingConfiguration/appsettings.json
+++ b/src/3.1/AppsettingConfiguration/appsettings.json
@@ -6,6 +6,16 @@
     "Name": "AppsettingLab",
     "Maintainer": "kkbruce"
   },
+  "section1": {
+    "subsection0": {
+      "key0": "value1",
+      "key1": "value2"
+    },
+    "subsection1": {
+      "key0": "value3",
+      "key1": "value4"
+    }
+  },
   "Server": "127.0.0.1",
   "User": "demo",
   "Pwd": "demo"
