--- a/src/3.1/FileUploadSample/FileUploadSample.csproj
+++ b/src/3.1/FileUploadSample/FileUploadSample.csproj
@@ -8,5 +8,9 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Upload\" />
+  </ItemGroup>
+
 
 </Project>
