--- a/src/3.1/IHttpClientFactory/HttpClientSample/HttpClientSample.csproj
+++ b/src/3.1/IHttpClientFactory/HttpClientSample/HttpClientSample.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
+    <PackageReference Include="refit" Version="5.0.23" />
   </ItemGroup>
 
 
