--- a/src/3.1/IHttpClientFactory/HttpClientSample/HttpClientSample.csproj
+++ b/src/3.1/IHttpClientFactory/HttpClientSample/HttpClientSample.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="3.1.2" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
     <PackageReference Include="refit" Version="5.0.23" />
   </ItemGroup>
