--- a/src/3.1/IHttpClientFactory/HttpClientConsoleSample/HttpClientConsoleSample.csproj
+++ b/src/3.1/IHttpClientFactory/HttpClientConsoleSample/HttpClientConsoleSample.csproj
@@ -5,4 +5,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.2" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.2" />
+  </ItemGroup>
+
 </Project>
