--- a/src/3.1/IHttpClientFactory/QueryMaskSqliteSample/QueryMaskSample.csproj
+++ b/src/3.1/IHttpClientFactory/QueryMaskSqliteSample/QueryMaskSample.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.2" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
   </ItemGroup>
 
