--- a/src/3.1/OData/7.4.0-beta/ODataWithEndpointNonEdm/ODataWithEndpoint.csproj
+++ b/src/3.1/OData/7.4.0-beta/ODataWithEndpointNonEdm/ODataWithEndpoint.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.OData" Version="7.4.0-beta" />
   </ItemGroup>
 
