--- a/src/3.1/FormatterSample/Properties/launchSettings.json
+++ b/src/3.1/FormatterSample/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "blog",
+      "launchUrl": "api/blog",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -20,7 +20,7 @@
     "FormatterSample": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "blog",
+      "launchUrl": "api/blog",
       "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
