--- a/src/3.1/IHttpClientFactory/QueryMaskSqliteHangfireSample/QueryMaskSample.csproj
+++ b/src/3.1/IHttpClientFactory/QueryMaskSqliteHangfireSample/QueryMaskSample.csproj
@@ -5,12 +5,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Hangfire.AspNetCore" Version="1.7.10" />
+    <PackageReference Include="HangFire.Core" Version="1.7.10" />
+    <PackageReference Include="Hangfire.Storage.SQLite" Version="0.2.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.2">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.2" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
+    <PackageReference Include="sqlite-net-pcl" Version="1.7.302-beta" />
   </ItemGroup>
 
 
